# MolTrustBench

./: .env.local.example  .gitignore  .ignore  Makefile  README.md  environment.yml  make.ps1  pyproject.toml
configs/benchmarks/: chembl_bioactivity.yaml  moleculeace.yaml  moleculenet.yaml  (+1 more)
paper/: MolTrustBench_submission_hardened_v30_pdffonts.txt  MolTrustBench_submission_hardened_v30_remote_compile_stdout.txt  MolTrustBench_submission_hardened_v31_from_v30_fixed_pdffonts.txt  MolTrustBench_submission_hardened_v31_pdffonts.txt  auto_report.md  bib_reviewer_preflight.md  claims.md  data_availability_bib.md  deposit_readme.md  evidence_matrix.md  main_figure_captions_v1.md  manuscript_skeleton.md  results_narrative_v0.md  reviewer_risks.md  submission_figure_map.md  target_journal_positioning.md  v30_sanity_checks.txt
scripts/: audit_benchmarks.sh  build_release_index.sh  collect_results.py  compute_exposure_delta_ci.py  create_experiment_matrix.py  h200_launch_detached.ps1  h200_launch_real_audit_gpu0.ps1  h200_setup_and_launch_real_audit_gpu0.ps1  h200_status.ps1  h200_sync_project.ps1  invoke_h200_command.ps1  make_all_figures.sh  make_bib_final_figures.py  make_bib_supplement_package.py  make_submission_figures.py  monitor_runs.py  run_baselines.sh  run_density_controls.sh  run_real_audit_gpu0.sh  run_temporal_eval.sh  setup_h200_env.sh
slurm/: audit_array.sbatch  report.sbatch  train_array.sbatch
tests/: test_density_matched.py  test_exposure_labels.py  test_metrics.py  test_no_leakage.py  test_release_index.py  test_standardization.py  test_temporal_split.py
(+198 files in other folders)
